--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,49 +1,3 @@
-.github-repos {
-    margin: 2rem auto;
-    text-align: center;
-}
-
-.repo-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-    justify-content: center;
-    color: var(--primary-text-color);
-    background-color: var(--primary-background-color);
-}
-
-.repo-card h3 {
-    color: var(--hoovering-color);
-}
-
-.repo-card {
-    background: var(--primary-background-color);
-    color: var(--primary-text-color);
-    border-radius: 0px;
-    padding: 1rem;
-    width: 25vw;
-    text-align: left;
-    text-decoration: none;
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    box-shadow: none;
-}
-
-.repo-card:hover {
-    transform: translateY(-5px) scale(1.03);
-    box-shadow: none;
-    background: var(--hoovering-color);
-    color: var(--secondary-text-color);
-}
-
-.repo-card:hover h3 {
-    transform: translateY(-5px) scale(1.03);
-    box-shadow: none;
-    background: var(--hoovering-color);
-    color: var(--secondary-text-color);
-}
-
 .projects {
     display: flex;
     flex-direction: column;
@@ -60,4 +14,27 @@
     margin-bottom: 1rem;
     text-align: center;
     color: var(--paragraph-title-text-color);
+}
+.mobile-projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2vw;
+    text-align: center;
+    font-family: 'Press Start 2P', cursive;
+    background-color: var(--primary-background-color);
+    color: var(--primary-text-color);
+    margin-left: 5vw;
+    margin-right: 5vw;
+    padding: 1vw;
+}
+
+.mobile-projects h2 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    text-align: center;
+    color: var(--paragraph-title-text-color);
+    margin-left: 1vw;
+    margin-right: 1vw;
 }
